# graph

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  GRAPH-HEAL_paper.tex  Makefile  README.md  Summaries_of_400-line_Chunks.csv  Summaries_of_Debugging_Service_Restart_File.csv  conftest.py  cpu_fault_A_2025-06-06_raw.json  cpu_fault_A_2025-06-06_raw_augmented.json  cpu_fault_A_fix_raw.json  cpu_fault_test.json  cursor_implement_missing_metric_evaluat.md  debug.json  debug_raw.json  docker-compose.yml  docker.py  maze_solver.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_raw.json  tree_L3.txt
config/: anomaly_thresholds.yaml  metric_map.yaml  recovery_strategies.yaml
docs/: quickstart.md
experiments/: cpu_fault_1749841685.json  cpu_fault_1749841685_augmented.json  cpu_fault_1749842192.json  cpu_fault_1749842192_augmented.json  cpu_fault_1749843890.json  cpu_fault_1749843890_augmented.json  cpu_fault_1749845036.json  cpu_fault_1749845050.json  cpu_fault_1749845050_augmented.json  cpu_fault_1749932115.json  cpu_fault_1749933060.json  cpu_fault_rerun.json
graph-heal/: Dockerfile  __init__.py  docker-compose.yml  requirements.txt  run_capture_and_eval.sh  setup.py  test_recovery.py
graph_heal/: __init__.py  anomaly_detection.py  central_monitor.py  fault_injection.py  graph_analysis.py  graph_heal.py  graph_model.py  health_manager.py  improved_statistical_detector.py  monitoring.py  recovery_system.py  service_graph.py  service_monitor.py
graph_heal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: ablation_study_results.json  advanced_ablation_study_results.json  advanced_metrics_evaluation.json  cpu_experiment.json  detection_accuracy_results.json  detection_accuracy_results_unified.json  memory_experiment.json  network_experiment.json  replay_results_1750278893.csv  replay_results_1750456026.csv  service_graph.json
scripts/: ablation_study.py  advanced_ablation_study.py  baseline_comparison.py  debug_metric_values.py  evaluate_metrics.py  final_evaluation.py  inject_cpu_fault.py  parameter_optimization.py  run_experiments.py  run_monitoring.py  run_reactor_monitor.py  run_statistical_experiments.py  validate_experimental_setup.py
service_b/: app.py
service_c/: app.py
src/: health_monitor.py  statistical_detector.py
tests/: test_anomaly_detection.py  test_anomaly_detection_edges.py  test_branch_fill.py  test_ci_coverage_fill.py  test_circular_dependency.py  test_end_to_end.py  test_graph_edges.py  test_graphheal_e2e.py  test_graphheal_end2end.py  test_health_manager.py  test_health_manager_branches.py  test_host_fault_stub.py  test_improved_statistical_detector.py  test_real_coverage.py  test_recovery_orchestrator.py  test_servicegraph_extra.py  test_servicegraph_paths.py  test_smoke_core.py  test_smoke_graphheal.py  (+1 more)
(+238 files in other folders)
