[project]
name = "graph-heal"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
authors = [ { name = "Graph-Heal Team" } ]

[project.dependencies]
flask = ">=2.0.1"
flask_cors = ">=3.0.10"
requests = ">=2.31.0"
numpy = ">=1.24.0"
psutil = "*"
prometheus-client = "==0.11.0"
matplotlib = "*"
numexpr = ">=2.8.4,<2.12"
bottleneck = ">=1.3.6,<1.6"
scipy = "*"
coverage = ">=7.5.1,<8"
pytest-cov = ">=4.1.0,<5"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 