[project]
name = "graph-heal"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
authors = [ { name = "Graph-Heal Team" } ]
dependencies = [
  "flask>=2.0.1",
  "flask_cors>=3.0.10",
  "requests>=2.31.0",
  "numpy>=1.24.0",
  "psutil",
  "prometheus-client==0.11.0",
  "matplotlib",
  "numexpr>=2.8.4,<2.12",
  "bottleneck>=1.3.6,<1.6",
  "scipy",
  "coverage>=7.5.1,<8",
  "pytest-cov>=4.1.0,<5",
  "pandas>=2.0",
  "networkx>=3.2",
  "python-louvain",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[tool.setuptools.packages.find]
# Limit discovery to the *root* package directory only.  This prevents the
# legacy `graph-heal/graph_heal` tree – which drags heavy dependencies – from
# being shipped in the wheel built on GitHub CI.
where = ["."]
include = ["graph_heal*"]
exclude = ["tests*", "scripts.test_*"] 